Pequeños cambios, probando commit por bash

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Tienda Online</title>
+    <title>La Plantería - Tienda Online</title>
     <link rel="stylesheet" href="/assets/styles/style.css">
 </head>
 <body>
 
     <header>
         <h1>
-          Mi Tienda 
+         La Plantería 
           <img src="assets/img/icono_planta.png" alt="Icono" class="header-logo">
         </h1>
         <nav>
@@ -24,7 +24,7 @@
     </header>
 
     <main>
-        <h2>¡Bienvenidos!</h2>
+        <h2>Sitio en construcción</h2>
         <p>Pronto podrás disfrutar de nuestras plantas.</p>
         </main>
 
