--- a/pages/registro.html
+++ b/pages/registro.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro - Mi Tienda</title>
+    <title>Registro - La Plantería</title>
     <link rel="stylesheet" href="/assets/styles/style.css">
 </head>
 <body>
 
     <header>
         <h1>
-          Mi Tienda 
+          La Plantería 
           <img src="../assets/img/icono_planta.png" alt="Icono" class="header-logo">
         </h1>
         <nav>
@@ -25,7 +25,7 @@
 
     <main>
         <h2>Crear una Cuenta</h2>
-        <p>Completa tus datos para registrarte en la tienda.</p>
+        <p>Completá tus datos para registrarte en la tienda.</p>
 
         <form action="#" method="get">
             
