Prueba método POST

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </nav>
     </header>
 
-    <main>
+    <main style="text-align: center;">
         <h2>Sitio en construcción</h2>
         <p>Pronto podrás disfrutar de nuestras plantas.</p>
         </main>
