--- a/pages/registro.html
+++ b/pages/registro.html
@@ -27,7 +27,7 @@
         <h2>Crear una Cuenta</h2>
         <p>Completá tus datos para registrarte en la tienda.</p>
 
-        <form action="#" method="get">
+        <form action="#" method="post">
             
             <div class="form-group">
                 <label for="nombre">Nombre:</label>
