Pestaña Login. detalles estéticos. Algunos bloques hechos flex.

--- a/index.html
+++ b/index.html
@@ -4,21 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Plantería - Tienda Online</title>
-    <link rel="stylesheet" href="/assets/styles/style.css">
+    <link rel="stylesheet" href="assets/styles/style.css">
 </head>
 <body>
 
     <header>
+        <a href="index.html" class="logo-container">
         <h1>
-         La Plantería 
+          La Plantería 
           <img src="assets/img/icono_planta.png" alt="Icono" class="header-logo">
         </h1>
+    </a>
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="#">Productos</a></li>
-                <li><a href="/pages/registro.html">Registrarse</a></li>
-                <li><a href="#">Login</a></li>
+                <li><a href="pages/registro.html">Registrarse</a></li>
+                <li><a href="pages/login.html">Login</a></li>
             </ul>
         </nav>
     </header>
