--- a/pages/login.html
+++ b/pages/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro - La Plantería</title>
+    <title>Login - La Plantería</title>
     <link rel="stylesheet" href="../assets/styles/style.css">
 </head>
 <body>
@@ -27,23 +27,12 @@
 
     <main>
        <div class="form-container"> 
-            <h2>Crear una Cuenta</h2>
+            <h2>Ingresar a tu cuenta</h2>
             <p style="text-align: center; margin-top: -1rem; margin-bottom: 2rem;">
-                Completá tus datos para registrarte.
+                Completá tus datos para ingresar.
             </p>
 
             <form action="#" method="post" id="registroForm"> 
-            
-                <div class="form-group">
-                    <label for="nombre">Nombre:</label>
-                    <input type="text" id="nombre" name="nombre" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="apellido">Apellido:</label>
-                    <input type="text" id="apellido" name="apellido" required>
-                </div>
-
                 <div class="form-group">
                     <label for="email">Email:</label>
                     <input type="email" id="email" name="email" required>
@@ -53,13 +42,7 @@
                     <label for="password">Contraseña:</label>
                     <input type="password" id="password" name="password" required minlength="8">
                 </div>
-
-                <div class="form-group">
-                    <label for="fecha_nacimiento">Fecha de Nacimiento:</label>
-                    <input type="date" id="fecha_nacimiento" name="fecha_nacimiento">
-                </div>
-
-                <button type="submit">Crear Cuenta</button>
+                <button type="submit">Ingresar</button>
 
             </form>
         </div>
