Pestaña Productos. Prototipo de card. Definición de paleta de colores

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </nav>
     </header>
 
-    <main style="text-align: center;">
+    <main>
         <h2>Sitio en construcción</h2>
         <p>Pronto podrás disfrutar de nuestras plantas.</p>
         </main>
