Imagen de fondo, cambios en los colores

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
-                <li><a href="#">Productos</a></li>
+                <li><a href="pages/productos.html">Productos</a></li>
                 <li><a href="pages/registro.html">Registrarse</a></li>
                 <li><a href="pages/login.html">Login</a></li>
             </ul>
@@ -26,8 +26,10 @@
     </header>
 
     <main>
-        <h2>Sitio en construcción</h2>
-        <p>Pronto podrás disfrutar de nuestras plantas.</p>
+        <div class="home-banner">
+            <h2>Sitio en construcción</h2>
+            <p>Pronto podrás disfrutar de nuestras plantas.</p>
+        </div>
         </main>
 
     <footer>
