--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Plantería - Tienda Online</title>
-    <link rel="stylesheet" href="assets/styles/style.css">
+    <link rel="stylesheet" href="../assets/styles/style.css">
 </head>
 <body>
 
@@ -17,23 +17,61 @@
     </a>
         <nav>
             <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="pages/productos.html">Productos</a></li>
-                <li><a href="pages/registro.html">Registrarse</a></li>
-                <li><a href="pages/login.html">Login</a></li>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="productos.html">Productos</a></li>
+                <li><a href="registro.html">Registrarse</a></li>
+                <li><a href="login.html">Login</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <div class="product-card">
-            <div class="product-image-container">
-                <img src="https://via.placeholder.com/300x300" alt="Nombre del Producto" class="product-image">
+        <div class="contenedor-productos">
+            <div class="product-card">
+                <div class="product-image-container">
+                    <img src="../assets/img/plantas cool.jpg" alt="planta.jpg" class="product-image">
+                </div>
+                <div class="product-info">
+                    <span class="product-category">Plantas de Interior</span>
+                    <h3 class="product-title">Plantas Chevere</h3>
+                    <p class="product-price">$99.99</p>
+                    <button class="add-to-cart-btn">Agregar al Carrito</button>
+                </div>
             </div>
-            <div class="product-info">
-                <span class="product-category">Categoría</span>
-                <h3 class="product-title">Nombre del Producto</h3>
-                <p class="product-price">$99.99</p>
-                <button class="add-to-cart-btn">Agregar al Carrito</button>
+
+            <div class="product-card">
+                <div class="product-image-container">
+                    <img src="../assets/img/plantas cool.jpg" alt="planta.jpg" class="product-image">
+                </div>
+                <div class="product-info">
+                    <span class="product-category">Plantas de Exterior</span>
+                    <h3 class="product-title">Cerezo Japonés</h3>
+                    <p class="product-price">$149.99</p>
+                    <button class="add-to-cart-btn">Agregar al Carrito</button>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <div class="product-image-container">
+                    <img src="../assets/img/plantas cool.jpg" alt="planta.jpg" class="product-image">
+                </div>
+                <div class="product-info">
+                    <span class="product-category">Plantas Tristes</span>
+                    <h3 class="product-title">Plantas Deprimidas</h3>
+                    <p class="product-price">$9.99</p>
+                    <button class="add-to-cart-btn">Agregar al Carrito</button>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <div class="product-image-container">
+                    <img src="../assets/img/plantas cool.jpg" alt="planta.jpg" class="product-image">
+                </div>
+                <div class="product-info">
+                    <span class="product-category">Plantas de Interior</span>
+                    <h3 class="product-title">Plantas cool</h3>
+                    <p class="product-price">$99.99</p>
+                    <button class="add-to-cart-btn">Agregar al Carrito</button>
+                </div>
             </div>
         </div>
     </main>
