--- a/pages/registro.html
+++ b/pages/registro.html
@@ -18,7 +18,7 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
-                <li><a href="#">Productos</a></li>
+                <li><a href="productos.html">Productos</a></li>
                 <li><a href="registro.html">Registrarse</a></li>
                 <li><a href="login.html">Login</a></li>
             </ul>
