--- a/pages/login.html
+++ b/pages/login.html
@@ -7,13 +7,9 @@
     <link rel="stylesheet" href="../assets/styles/style.css">
 </head>
 <body>
-
     <header>
         <a href="../index.html" class="logo-container">
-        <h1>
-          La Plantería 
-          <img src="../assets/img/icono_planta.png" alt="Icono" class="header-logo">
-        </h1>
+            <h1>La Plantería <img src="../assets/img/icono_planta.png" class="header-logo"></h1>
         </a>
         <nav>
             <ul>
@@ -26,31 +22,24 @@
     </header>
 
     <main>
-       <div class="form-container"> 
-            <h2>Ingresar a tu cuenta</h2>
-            <p style="text-align: center; margin-top: -1rem; margin-bottom: 2rem;">
-                Completá tus datos para ingresar.
-            </p>
-
-            <form action="#" method="post" id="registroForm"> 
+        <div class="form-container">
+            <h2>Iniciar Sesión</h2>
+            <form action="#" method="post" id="loginForm">
                 <div class="form-group">
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required>
+                    <label>Email:</label>
+                    <input type="email" name="email" required>
                 </div>
-
                 <div class="form-group">
-                    <label for="password">Contraseña:</label>
-                    <input type="password" id="password" name="password" required minlength="8">
+                    <label>Contraseña:</label>
+                    <input type="password" name="password" required>
                 </div>
                 <button type="submit">Ingresar</button>
-
             </form>
         </div>
     </main>
 
-    <footer>
-        <p>&copy; 2025 - Proyecto Aplicaciones Web</p>
-    </footer>
+    <footer><p>&copy; 2025</p></footer>
 
+    <script src="../assets/js/main.js"></script>
 </body>
 </html>
