--- a/pages/registro.html
+++ b/pages/registro.html
@@ -55,6 +55,12 @@
                 </div>
 
                 <div class="form-group">
+                    <label for="confirmPassword">Confirmar Contraseña:</label>
+                    <!-- 3. Asegúrate que este sea id="confirmPassword" -->
+                    <input type="password" id="confirmPassword" name="confirmPassword" required>
+                </div>
+
+                <div class="form-group">
                     <label for="fecha_nacimiento">Fecha de Nacimiento:</label>
                     <input type="date" id="fecha_nacimiento" name="fecha_nacimiento">
                 </div>
@@ -68,6 +74,6 @@
     <footer>
         <p>&copy; 2025 - Proyecto Aplicaciones Web</p>
     </footer>
-
+    <script src="../assets/js/main.js"></script>
 </body>
 </html>
