--- a/pages/login.html
+++ b/pages/login.html
@@ -34,6 +34,10 @@
                     <input type="password" name="password" required>
                 </div>
                 <button type="submit">Ingresar</button>
+                <p class="form-link">
+                    ¿No tienes una cuenta? 
+                    <a href="registro.html">Regístrate aquí</a>.
+                </p>
             </form>
         </div>
     </main>
