--- a/pages/productos.html
+++ b/pages/productos.html
@@ -8,7 +8,22 @@
 </head>
 <body>
 
-    <header id="main-header"></header>
+    <header id="main-header">
+        <a href="index.html" class="logo-container">
+            <h1>
+              La Plantería 
+              <img src="../assets/img/icono_planta.png" alt="Icono" class="header-logo">
+            </h1>
+        </a>
+        <nav>
+            <ul>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="productos.html">Productos</a></li>
+                <li><a href="registro.html">Registrarse</a></li>
+                <li><a href="login.html">Login</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <main>
         <section class="featured-products">
