--- a/pages/registro.html
+++ b/pages/registro.html
@@ -66,7 +66,10 @@
                 </div>
 
                 <button type="submit">Crear Cuenta</button>
-
+                <p class="form-link">
+                    ¿Ya tienes una cuenta? 
+                    <a href="login.html">Inicia Sesión</a>.
+                </p>
             </form>
         </div>
     </main>
