Etapa 4. Spinner agregado

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main>
         <section class="hero" >
             <h2>Bienvenido a La Plantería</h2>
-            <p>Plantas para tu hogar</p>
+            <p>Plantas que le dan vida a tu hogar</p>
         </section>
 
         <section class="home-banner">
@@ -43,6 +43,10 @@
             <a href="pages/productos.html" class="btn">Ver Productos Disponibles</a>
         </section>
     </main>
+
+    <div id="loader-overlay">
+        <div class="loader"></div>
+    </div>
 
     <footer>
         <p>&copy; 2025 - Proyecto Aplicaciones Web</p>
