--- a/pages/registro.html
+++ b/pages/registro.html
@@ -74,6 +74,10 @@
         </div>
     </main>
 
+    <div id="loader-overlay">
+        <div class="loader"></div>
+    </div>
+
     <footer>
         <p>&copy; 2025 - Proyecto Aplicaciones Web</p>
     </footer>
