--- a/pages/login.html
+++ b/pages/login.html
@@ -42,6 +42,10 @@
         </div>
     </main>
 
+    <div id="loader-overlay">
+        <div class="loader"></div>
+    </div>
+
     <footer><p>&copy; 2025</p></footer>
 
     <script src="../assets/js/main.js"></script>
