--- a/pages/productos.html
+++ b/pages/productos.html
@@ -36,6 +36,10 @@
         </section>
     </main>
 
+    <div id="loader-overlay">
+        <div class="loader"></div>
+    </div>
+
     <footer>
         <p>&copy; 2025 - Proyecto Aplicaciones Web</p>
     </footer>
