--- a/index.html
+++ b/index.html
@@ -52,6 +52,16 @@
         <p>&copy; 2025 - Proyecto Aplicaciones Web</p>
     </footer>   
 
+        <!-- Loader Overlay -->
+    <div id="loader-overlay" class="loader-overlay">
+        <div class="spinner"></div>
+    </div>
+    <div id="toast-container" class="toast-container">
+        <div id="toast-message" class="toast-message">
+            
+        </div>
+    </div>
+
     <script src="assets/js/data.js"></script>
     <script src="assets/js/components.js"></script>
     <script src="assets/js/main.js"></script>
