--- a/pages/registro.html
+++ b/pages/registro.html
@@ -81,6 +81,14 @@
     <footer>
         <p>&copy; 2025 - Proyecto Aplicaciones Web</p>
     </footer>
+    <div id="toast-container" class="toast-container">
+        <div id="toast-message" class="toast-message">
+        </div>
+    </div>
+        <!-- Loader Overlay -->
+    <div id="loader-overlay" class="loader-overlay">
+        <div class="spinner"></div>
+    </div>
     <script src="../assets/js/main.js"></script>
 </body>
 </html>
