--- a/pages/login.html
+++ b/pages/login.html
@@ -47,6 +47,15 @@
     </div>
 
     <footer><p>&copy; 2025</p></footer>
+    <div id="toast-container" class="toast-container">
+        <div id="toast-message" class="toast-message">
+        </div>
+    </div>
+
+        <!-- Loader Overlay -->
+    <div id="loader-overlay" class="loader-overlay">
+        <div class="spinner"></div>
+    </div>
 
     <script src="../assets/js/main.js"></script>
 </body>
