Detalles estéticos, typos, acomodo de código

--- a/pages/login.html
+++ b/pages/login.html
@@ -57,6 +57,8 @@
         <div class="spinner"></div>
     </div>
 
+    <script src="../assets/js/data.js"></script>
+    <script src="../assets/js/components.js"></script>
     <script src="../assets/js/main.js"></script>
 </body>
 </html>
