--- a/pages/registro.html
+++ b/pages/registro.html
@@ -73,21 +73,24 @@
         </div>
     </main>
 
-    <div id="loader-overlay">
-        <div class="loader"></div>
-    </div>
+    
 
     <footer>
         <p>&copy; 2025 - Proyecto Aplicaciones Web</p>
     </footer>
+    
+    <div id="loader-overlay">
+        <div class="loader"></div>
+    </div>
+
     <div id="toast-container" class="toast-container">
         <div id="toast-message" class="toast-message">
         </div>
     </div>
-        <!-- Loader Overlay -->
-    <div id="loader-overlay" class="loader-overlay">
-        <div class="spinner"></div>
-    </div>
+
+    <script src="../assets/js/data.js"></script>
+    <script src="../assets/js/components.js"></script>
     <script src="../assets/js/main.js"></script>
 </body>
+
 </html>
