--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
         <p>&copy; 2025 - Proyecto Aplicaciones Web</p>
     </footer>   
 
+    <a href="https://wa.me/+5492944581791" class="whatsapp-float" target="_blank" title="Chat en WhatsApp">
+        <img src="assets/img/whatsapp.png" alt="WhatsApp">
+    </a>
+
     <div id="loader-overlay">
         <div class="loader"></div>
     </div>
