--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -51,10 +51,14 @@
         <p>&copy; 2025 - Proyecto Aplicaciones Web</p>
     </footer>
 
-        <!-- Loader Overlay -->
-    <div id="loader-overlay" class="loader-overlay">
-        <div class="spinner"></div>
+    <a href="https://wa.me/+5492944581791" class="whatsapp-float" target="_blank" title="Chat en WhatsApp">
+        <img src="../assets/img/whatsapp.png" alt="WhatsApp">
+    </a>
+    
+    <div id="loader-overlay">
+        <div class="loader"></div>
     </div>
+    
     <div id="toast-container" class="toast-container">
         <div id="toast-message" class="toast-message">
         </div>
