--- a/pages/login.html
+++ b/pages/login.html
@@ -46,13 +46,19 @@
         <div class="loader"></div>
     </div>
 
-    <footer><p>&copy; 2025</p></footer>
+    <footer>
+        <p>&copy; 2025 - Proyecto Aplicaciones Web</p>
+    </footer>
+
+    <a href="https://wa.me/+5492944581791" class="whatsapp-float" target="_blank" title="Chat en WhatsApp">
+        <img src="../assets/img/whatsapp.png" alt="WhatsApp">
+    </a>
+    
     <div id="toast-container" class="toast-container">
         <div id="toast-message" class="toast-message">
         </div>
     </div>
 
-        <!-- Loader Overlay -->
     <div id="loader-overlay" class="loader-overlay">
         <div class="spinner"></div>
     </div>
