--- a/pages/productos.html
+++ b/pages/productos.html
@@ -44,6 +44,10 @@
         <p>&copy; 2025 - Proyecto Aplicaciones Web</p>
     </footer>
 
+    <a href="https://wa.me/+5492944581791" class="whatsapp-float" target="_blank" title="Chat en WhatsApp">
+        <img src="../assets/img/whatsapp.png" alt="WhatsApp">
+    </a>
+
         <!-- Loader Overlay -->
     <div id="loader-overlay" class="loader-overlay">
         <div class="spinner"></div>
