--- a/pages/registro.html
+++ b/pages/registro.html
@@ -78,6 +78,10 @@
     <footer>
         <p>&copy; 2025 - Proyecto Aplicaciones Web</p>
     </footer>
+
+    <a href="https://wa.me/+5492944581791" class="whatsapp-float" target="_blank" title="Chat en WhatsApp">
+        <img src="../assets/img/whatsapp.png" alt="WhatsApp">
+    </a>
     
     <div id="loader-overlay">
         <div class="loader"></div>
